[tool.poetry]
name = "energium-protocol-sdk"
version = "0.0.2"
description = ""
authors = ["dyus <dyuuus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
